--- a/style/main.css
+++ b/style/main.css
@@ -313,6 +313,7 @@ hr {
     z-index: 10;
     font-size: 55px; }
   .tile.tile-2 .tile-inner {
+    background: url('http://freepressjournal.in/wp-content/uploads/2014/04/RajinikantH.jpg');
     background: #eee4da;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-4 .tile-inner {
